# FastFileCheck

./: .gitignore  CMakeLists.txt  README.md  TODO.md  example.conf
src/: config.c  config.h  database.c  database.h  directory.c  directory.h  logging.c  logging.h  main.c  process_directories.c  process_directories.h  process_file.c  process_file.h  queue.c  queue.h  summary.c  summary.h  version.h.in
